Use LinkedHashSet to preserve insertion order to replace ImmutableSet